/* Encoding: UTF-8 (No BOM)  Notation (in 5th column):
     * Change  ! Fix  % Optimize  + Add  - Remove  ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-03-20 21:59 UTC naldodj
  + bin/harbour/advapi32.dll
  + bin/harbour/gdi32.dll
  + bin/harbour/gdi32full.dll
  + bin/harbour/harbour-32-x64.dll
  + bin/harbour/hbrun.exe
  + bin/harbour/iphlpapi.dll
  + bin/harbour/kernel32.dll
  + bin/harbour/kernelbase.dll
  + bin/harbour/msvcp_win.dll
  + bin/harbour/msvcrt.dll
  + bin/harbour/ntdll.dll
  + bin/harbour/rpcrt4.dll
  + bin/harbour/sechost.dll
  + bin/harbour/ucrtbase.dll
  + bin/harbour/usrr32.dll
  + bin/harbour/win32u.dll
  + bin/harbour/winmm.dll
  + bin/harbour/ws2_32.dll
  + src/ts/embaralha.ts
  * bin/commit.hb

2024-11-22 13:19 UTC naldodj
  * src/tlpp/embaralha.tlpp

2024-11-22 13:06 UTC naldodj
  * src/harbour/embaralha.prg

2024-11-22 12:02 UTC naldodj
  + bin/3rdpatch.hb
  + bin/check.hb
  + bin/commit.hb
  + bin/findnoasciicharacters.ps1
  + bin/harbour.ucf
  + bin/tolower.ps1

2024-11-22 11:55 UTC naldodj
  * src/harbour/embaralha.prg
  * src/tlpp/embaralha.tlpp

2024-11-22 09:44 UTC naldodj
  * src/tlpp/tst_embaralha.tlpp

2024-11-22 08:09 UTC naldodj
  * src/harbour/embaralha.prg
  * src/tlpp/embaralha.tlpp

2024-11-21 19:42 UTC naldodj
  * src/tlpp/tst_embaralha.tlpp

2024-11-21 18:52 UTC naldodj
  * src/harbour/embaralha.prg
  * src/tlpp/embaralha.tlpp

2024-11-21 17:37 UTC naldodj
  * src/tlpp/tst_embaralha.tlpp

2024-11-21 17:27 UTC naldodj
  * .gitignore
  + src/tlpp/embaralha.tlpp
  + src/advPL_tlPP/embaralha.tlpp
  + src/advPL_tlPP/tst_embaralha.tlpp
  + src/tlpp/tst_embaralha.tlpp
  * src/harbour/embaralha.prg
  * ChangeLog.txt

2024-11-21 16:24 UTC naldodj
  + src/harbour/embaralha.prg