@@ -3,6 +3,9 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-03-20 22:09 UTC naldodj
+  * src/ts/embaralha.ts
+
 2025-03-20 21:59 UTC naldodj
   + bin/harbour/advapi32.dll
   + bin/harbour/gdi32.dll
